# Content-Topic-Classifier

./: Makefile  README.md  eda.ipynb  pyproject.toml  requirements.txt
src/: main.py  predict_template.py
