[project]
name = "newsela"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dacite>=1.9.2",
    "matplotlib>=3.10.6",
    "matplotlib-inline>=0.1.7",
    "mlflow>=3.4.0",
    "pandas>=2.3.3",
    "pexpect>=4.9.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "setuptools>=80.9.0",
]
